test/official_tests/super/super_at_top_level.lox
super.foo("bar"); // error: {"line":1,"message":"Can't use 'super' outside of a class","type":"RuntimeError"}
super.foo; // error: {"line":2,"message":"Can't use 'super' outside of a class","type":"RuntimeError"}